--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,6 +5,7 @@
          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/8.4/phpunit.xsd"
          colors="true"
          cacheResult="false"
+         bootstrap="vendor/autoload.php"
 >
 
     <testsuites>
