csv storage added

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,9 @@
       "psr-4": {
         "PhpObjectHistory\\Tests\\": "tests/"
       }
-    }
+    },
+  "require": {
+    "ext-mbstring": "*",
+    "php": "^7.2"
+  }
 }
