--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,34 @@
 {
-    "require-dev": {
-        "phpunit/phpunit": "^8.4"
-    },
-    "autoload": {
-      "psr-4": {
-        "PhpObjectHistory\\": "src/"
-      }
-    },
-    "autoload-dev": {
-      "psr-4": {
-        "PhpObjectHistory\\Tests\\": "tests/"
-      }
-    },
+  "name": "sebvie/php-object-history",
+  "type": "library",
+  "description": "Record the change of a PHP object and display it in a csv file",
+  "keywords": [
+    "history",
+    "object"
+  ],
+  "homepage": "https://github.com/sebvie/php-object-history",
+  "license": "mit",
+  "authors": [
+    {
+      "name": "JSebastian Viereck",
+      "homepage": "http://www.sebastianviereck.de",
+      "role": "Developer"
+    }
+  ],
   "require": {
-    "ext-mbstring": "*",
     "php": "^7.2"
+  },
+  "require-dev": {
+      "phpunit/phpunit": "^8.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "PhpObjectHistory\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "PhpObjectHistory\\Tests\\": "tests/"
+    }
   }
 }
