--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
     }
   ],
   "require": {
-    "php": "^7.2"
+    "php": "^5.6"
   },
   "require-dev": {
-      "phpunit/phpunit": "^8.4"
+      "phpunit/phpunit": "*"
   },
   "autoload": {
     "psr-4": {
