--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ matrix:
   # Fast finish allows to set the build as "finished" even if the "allow_failures" matrix elements are not finished yet.
   fast_finish: true
   include:
-    - php: 5.6
     - php: 7.0
     - php: 7.1
     - php: 7.2
@@ -19,7 +18,6 @@ matrix:
 
 
   allow_failures:
-    - php: 5.6
     - php: 7.0
     - php: 7.1
 
@@ -36,6 +34,7 @@ install:
 
 before_script:
   - mkdir -p build/logs
+  - mkdir -p var
   - ls -al
 
 script:
